--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>programmer coffee</title>
     <link rel="stylesheet" href="./stylesheets/style.css">
     <link rel="stylesheet" href="./stylesheets/main.css">
+    <link rel="stylesheet" href="./stylesheets/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -60,16 +61,14 @@
                 </div>
                 <div class="image">
                     <img src="https://images.costco-static.com/ImageDelivery/imageService?profileId=12026540&itemId=521658-847&recipeName=680"
-                    width ="auto"    
-                    height="600px">
+                        width="auto" height="350px">
                 </div>
 
             </section>
             <section class="chill left-right-section">
                 <div class="image">
-                    <img src="https://images-na.ssl-images-amazon.com/images/I/71stbgdv2ML._SL1500_.jpg"
-                    width ="auto"    
-                    height="400px">
+                    <img src="https://images-na.ssl-images-amazon.com/images/I/71stbgdv2ML._SL1500_.jpg" width="auto"
+                        height="400px">
                 </div>
                 <div class="text">
                     <h1>CHILL CHOCKELET ADKFJOIDJF <br>
@@ -80,41 +79,63 @@
             </section>
 
             <section>
+
                 <div class="top-bottom-section">
-                    <div class="section-container">
-                        <div class="image">
-                            <img src="https://content-prod-live.cert.starbucks.com/binary/v2/asset/137-70203.jpg"
-                            width ="auto"    
+
+                    <div class="image">
+                        <img src="https://www.chokola.in/images/choko-la-chocolate-banner-new.png" width="auto"
                             height="400px">
-                        </div>
-                        <div class="text">
-                            <h1>Order and pick up. Easy as that. </h1>
-                            <h3>Just open the app, order your favorites, and enjoy contactless pay. From there, choose whichever pickup method is best for you. </h3>
-                            <div class="cta">See pickup option</div>
+                    </div>
+                    <div class="text">
+                        <h1>Floating into summer like…</h1>
+                        <h3>Keep the laid-back vibes going. Order Starbucks drinks on Uber Eats.** </h3>
+                        <div class="cta-container">
+                            <div class="cta">Order now</div>
                         </div>
                     </div>
                 </div>
-                <div class="top-bottom-section">
-                    <div class="section-container">
-                        <div class="image">
-                            <img src="https://content-prod-live.cert.starbucks.com/binary/v2/asset/137-72045.jpg"
-                            width ="auto"    
-                            height="400px">
-                        </div>
-                        <div class="text">
-                            <h1>Floating into summer like…</h1>
-                                <h3>Keep the laid-back vibes going. Order Starbucks drinks on Uber Eats.** </h3>
-                                <div class="cta-container">
-                                <div class="cta">Order now</div>
-                                </div>
-                        </div>
-                    </div>
-                </div>
-            </section>  
+        </div>
+        </section>
     </main>
+
+
     <footer>
-        .footer-container
-        
+        <div class="footer-container">
+            <div class="links-container">
+                <h3>About Us</h3>
+                <ul>
+                    <li>Our Heritage</li>
+                    <li>Our Heritage</li>
+                    <li>Our Heritage</li>
+                    <li>Our Heritage</li>
+                    <li>Our Heritage</li>
+                    <li>Our Heritage</li>
+                </ul>
+            </div>
+            <div class="links-container">
+                <h3>Careers</h3>
+                <ul>
+                    <li>Our Heritage</li>
+                    <li>Our Heritage</li>
+                    <li>Our Heritage</li>
+                    <li>Our Heritage</li>
+                    <li>Our Heritage</li>
+                    <li>Our Heritage</li>
+                </ul>
+            </div>
+            <div class="links-container">
+                <h3>Social Impact</h3>
+                <ul>
+                    <li>Our Heritage</li>
+                    <li>Our Heritage</li>
+                    <li>Our Heritage</li>
+                    <li>Our Heritage</li>
+                    <li>Our Heritage</li>
+                    <li>Our Heritage</li>
+                </ul>
+            </div>
+        </div>
+
     </footer>
 </body>
 
